--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
+    "@stripe/stripe-js": "^1.19.1",
+    "axios": "^0.22.0",
+    "faunadb": "4.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.0",
+    "sass": "^1.42.1",
+    "stripe": "^8.178.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.26",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "next-auth": "^3.29.0",
+    "typescript": "^4.4.3"
   }
 }
